libraries/ckit/regression/valid-programs/a31.c
void *f(int x) {
 return((void *) (((int) f) + x));
}

main () {
 f(3);
}
