libraries/ckit/regression/invalid-programs/r40.c
int f(int x) {
 return(0);
}

main () {
 int f;
 f(3);
}
